--- a/backtracking.html
+++ b/backtracking.html
@@ -14,7 +14,7 @@
     <p>Conceptually, you start at the root of a tree; the tree probably has some good leaves and some bad leaves, though it may be that the leaves are all good or all bad. You want to get to a good leaf. At each node, beginning with the root, you choose one of its children to move to, and you keep this up until you get to a leaf.</p>
     <p>Suppose you get to a bad leaf. You can <i>backtrack</i> to continue the search for a good leaf by revoking your most recent choice, and trying out the next option in that set of options. If you run out of options, revoke the choice that got you here, and try another choice at that node. If you end up at the root with no options left, there are no good leaves to be found.</p>
     <p>This needs an example.</p>
-    <center><img src="C:/Users/Azra/Downloads/treesearch.jpg" alt="treesearch" width="200" height="130"></center>
+    <center><img src="https://www.cis.upenn.edu/~matuszek/cit594-2012/Pages/backtracking_files/treesearch.gif" alt="treesearch" width="200" height="130"></center>
     <ol>
         <li>Starting at Root, your options are A and B. You choose A.</li>
         <li>At A, your options are C and D. You choose C.</li>
@@ -137,7 +137,7 @@
 <h3>Example: TreeSearch</h3>
 <p>For starters, let's do the simplest possible example of backtracking, which is searching an actual tree. We will also use the simplest kind of tree, a binary tree.</p>
 <p>A <b>binary</b> tree is a data structure composed of <b>nodes</b>. One node is designated as the <b>root node</b>. Each node can reference (point to) zero, one, or two other nodes, which are called its <b>children</b>. The children are referred to as the <b>left child</b> and/or the <b>right child</b>. All nodes are reachable (by one or more steps) from the root node, and there are no cycles. For our purposes, although this is not part of the definition of a binary tree, we will say that a node might or might not be a goal node, and will contain its name. The first example in this paper (which we repeat here) shows a binary tree.</p>
-<center><img src="C:/Users/Azra/Downloads/treesearch.jpg" alt="treesearch" width="200" height="130"></center>
+<center><img src="https://www.cis.upenn.edu/~matuszek/cit594-2012/Pages/backtracking_files/treesearch.gif" alt="treesearch" width="200" height="130"></center>
 <p>Here's a definition of the BinaryTree class:</p>
 <font color="brown"size="4">
     <pre>
